sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:7: error: '(' expected but identifier found.
	} else if pos==getNombreValeur-1) {
                  ^AlgGnomeSort:15: error: illegal start of simple expression
}
^